add new website from server na

--- a/xem-phim-bo/mi-nu-va-quy-ngai-lang-man/index.html
+++ b/xem-phim-bo/mi-nu-va-quy-ngai-lang-man/index.html
@@ -1194,7 +1194,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1774,18 +1774,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-quan-sat" title="Người Quan Sát">
+          <a class="list-top-movie-link" href="/phim-moi/ong-hoang-truyen-hinh" title="Ông Hoàng Truyền Hình">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-quan-sat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ong-hoang-truyen-hinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người Quan Sát
+             Ông Hoàng Truyền Hình
             </span>
             <span class="list-top-movie-item-en">
-             Watcher
+             The King of Dramas
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hidden-strike" title="Hidden Strike">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hidden-strike-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hidden Strike
+            </span>
+            <span class="list-top-movie-item-en">
+             Hidden Strike
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1796,62 +1818,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/doi-cau-long-thieu-nien" title="Đội Cầu Lông Thiếu Niên">
+          <a class="list-top-movie-link" href="/phim-moi/hoang-tu-ai-cap" title="Hoàng Tử Ai Cập">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-cau-long-thieu-nien-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoang-tu-ai-cap-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đội Cầu Lông Thiếu Niên
+             Hoàng Tử Ai Cập
             </span>
             <span class="list-top-movie-item-en">
-             Racket Boys
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khu-rung-nho-cua-hai-nguoi" title="Khu Rừng Nhỏ Của Hai Người">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khu-rung-nho-cua-hai-nguoi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Khu Rừng Nhỏ Của Hai Người
-            </span>
-            <span class="list-top-movie-item-en">
-             A Romance of the Little Forest
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tin-hieu-kich-dong" title="Tín Hiệu Kích Động">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tin-hieu-kich-dong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tín Hiệu Kích Động
-            </span>
-            <span class="list-top-movie-item-en">
-             The Signal
+             The Prince of Egypt
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1862,21 +1840,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-quan-ly-dai-tai" title="Người quản lý đại tài">
+          <a class="list-top-movie-link" href="/phim-moi/fazilet-va-nhung-co-con-gai-phan-1" title="Fazilet Và Những Cô Con Gái (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-quan-ly-dai-tai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/fazilet-hanim-ve-kizlari-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người quản lý đại tài
+             Fazilet Và Những Cô Con Gái (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             The Midas Touch
+             Fazilet Hanim ve Kizlari (Season 1)
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/canh-sat-tuong-lai" title="Cảnh Sát Tương Lai">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/canh-sat-tuong-lai-2010-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cảnh Sát Tương Lai
+            </span>
+            <span class="list-top-movie-item-en">
+             Future X-Cops
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
